style subscribe and faq sections

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -15,7 +15,7 @@ body {
   font-size: 16px;
   line-height: 189%;
   margin: 0;
-  background-color: var(--color-white);
+  background-color: var(--primary);
 
   @media screen and (min-width: $bp-tablet){
     font-size: 18px;
