--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,10 +1,10 @@
 .button {
   display: block;
-  border-radius: 6px;
-  padding: 5px 26px;
+  border-radius: 32px;
+  padding: 8px 25px;
   color: var(--color-white);
-  background-color: var(--color-accent-dark);
-  border: 2px solid var(--color-accent-dark);
+  background-color: var(--color-accent);
+  border: 2px solid var(--color-accent);
   cursor: pointer;
   font-weight: 600;
   font-size: 16px;
@@ -12,7 +12,7 @@
   text-wrap: nowrap;
 
   &:hover {
-    color: var(--color-accent-dark);
+    color: var(--color-accent);
     background: transparent;
   }
 
