--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -1,9 +1,9 @@
 .input {
   position: relative;
   display: flex;
-  border-radius: 13px;
-  background-color: var(--primary);
-  padding: 6px 30px;
+  border-radius: 53px;
+  background-color: var(--color-white);
+  padding: 24px;
 
   &__label {
     position: absolute;
@@ -12,7 +12,7 @@
   }
 
   &__control {
-    padding: 8px 24px;
+    padding: 6px 0;
     width: 100%;
     font-size: 16px;
     line-height: 1.17;
@@ -26,17 +26,13 @@
     }
 
     &::placeholder {
-      color: rgba(0, 0, 0, 0.4);
+      color: var(--color-text-second-light);
       font-size: 16px;
       line-height: 1.17;
     }
 
     &:focus::placeholder {
       color: var(--color-primary-dark);
-    }
-
-    @media screen and (min-width: $bp-tablet) {
-      padding: 16px 42px;
     }
   }
 }
