--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -1,20 +1,15 @@
 :root {
-  --primary: #f5f9fe;
-  --secondary: #0393e5;
-  --secondary-light: #f5f9fe;
-  --secondary-orange: #ffb900;
+  --primary: #fff5ec;
 
-  --color-accent: #0bd0d0;
-  --color-accent-dark: #041ca7;
+  --color-accent: #f2994a;
 
   --color-black: #000000;
   --color-white: #ffffff;
-  --color-text-second: #536288;
-  --color-text-primary: #0f2f64;
-  --color-text-primary-light: #1e5dbc;
+  --color-text-second: #232434;
+  --color-text-second-light: #828282;
+  --color-text-primary: #38404c;
 
-  --font-family: "Work Sans", sans-serif;
-  --second-family: "Poppins", sans-serif;
+  --font-family: "Poppins", sans-serif;
 }
 
 $bp-mobile: 480px;
