--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -56,23 +56,30 @@
     width: 100%;
     flex-direction: column;
     align-items: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
     gap: 20px;
-    text-align: center;
 
     @media screen and (min-width: $bp-tablet){
-      justify-content: space-around;
+      justify-content: space-between;
+      flex-direction: row;
+      align-items: flex-start;
     }
   }
 
   &__menu {
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-bottom: 38px;
+    gap: 20px;
     flex-direction: column;
+    align-items: center;
 
     @media screen and (min-width: $bp-tablet){
-      flex-direction: row;
+      width: 40%;
+      align-items: flex-start;
     }
   }
 }
