--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -6,8 +6,10 @@
   --color-black: #000000;
   --color-white: #ffffff;
   --color-text-second: #232434;
+  --color-text-second-dark: #16171c;
   --color-text-second-light: #828282;
   --color-text-primary: #38404c;
+  --color-text-primary-dark: #333;
 
   --font-family: "Poppins", sans-serif;
 }
