--- a/src/scss/layouts/_education-section.scss
+++ b/src/scss/layouts/_education-section.scss
@@ -1,22 +1,22 @@
 .education-section {
 
   &__container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-    @media screen and (min-width: $bp-tablet) {
-      flex-direction: row;
-    }
+    //display: flex;
+    //flex-direction: column;
+    //gap: 20px;
+    //
+    //@media screen and (min-width: $bp-tablet) {
+    //  flex-direction: row;
+    //}
   }
 
-  &__title {
-    width: 100%;
-
-    @media screen and (min-width: $bp-tablet) {
-      width: 40%;
-    }
-  }
+  //&__title {
+  //  width: 100%;
+  //
+  //  @media screen and (min-width: $bp-tablet) {
+  //    width: 40%;
+  //  }
+  //}
 
   &__content {
     width: 100%;
