styling career section

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  color: var(--color-text-second);
+  color: var(--color-text-primary);
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 16px;
