--- a/src/scss/layouts/_career-section.scss
+++ b/src/scss/layouts/_career-section.scss
@@ -1,4 +1,35 @@
 .career-section {
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  &__container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  &__content {
+    width: 100%;
+    position: relative;
+    z-index: 1;
+
+    @media screen and (min-width: $bp-tablet) {
+      width: 50%;
+    }
+  }
+
+  &__img {
+    display: none;
+    position: absolute;
+    //top: -25%;
+    z-index: 0;
+
+    @media screen and (min-width: $bp-tablet) {
+      width: 50%;
+      display: block;
+    }
+  }
 
   &__list {
     display: grid;
