--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -5,7 +5,7 @@
 
   --color-black: #000000;
   --color-white: #ffffff;
-  --color-text-second: #232434;
+  --color-text-second: #505e6b;
   --color-text-second-dark: #16171c;
   --color-text-second-light: #828282;
   --color-text-primary: #38404c;
