--- a/src/scss/components/_life-card.scss
+++ b/src/scss/components/_life-card.scss
@@ -1,27 +1,28 @@
 .life-card {
   font-family: var(--second-family);
-  padding: 24px;
+  padding: 14px;
   height: 100%;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 160%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  border-radius: 32px;
+  gap: 16px;
+  background-color: var(--color-white);
+  box-shadow: 0 4px 21px 0 #ffefe0;
   align-items: center;
-  border-radius: 2px;
 
   &__title {
     font-family: var(--font-family);
     margin-bottom: 8px;
     font-weight: 500;
-    font-size: 22px;
+    font-size: 17px;
     line-height: 120%;
     color: var(--color-text-primary);
   }
 
-  &__img {
-    width: 76px;
-    height: 76px;
-    margin-bottom: 8px;
+  &__icon {
+    fill: var(--color-accent);
   }
 }
