--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -20,23 +20,17 @@
   }
 
   &__link {
-    color: var(--secondary);
+    color: var(--color-accent);
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 140%;
 
     &:hover {
-      color: var(--secondary);
-    }
-
-    &--footer {
-      color: var(--primary);
-
-      &:hover {
-        color: var(--primary);
-      }
+      color: var(--color-accent);
     }
   }
 
   &__img {
-    //object-fit: contain;
     height: 50px;
   }
 }
