--- a/src/scss/layouts/_life-section.scss
+++ b/src/scss/layouts/_life-section.scss
@@ -2,7 +2,8 @@
 
   &__list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
 
   &__item {
