--- a/src/scss/layouts/_costs-section.scss
+++ b/src/scss/layouts/_costs-section.scss
@@ -1,6 +1,33 @@
 .costs-section {
-  //
-  //&__content {
-  //  padding: 0 56px;
-  //}
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  &__container {
+    width: 100%;
+    //display: flex;
+    //justify-content: flex-end;
+  }
+
+  &__content {
+    width: 100%;
+    position: relative;
+    z-index: 1;
+
+    @media screen and (min-width: $bp-tablet) {
+      width: 50%;
+    }
+  }
+
+  &__img {
+    display: none;
+    position: absolute;
+    z-index: 0;
+    right: 0;
+
+    @media screen and (min-width: $bp-tablet) {
+      width: 50%;
+      display: block;
+    }
+  }
 }
