--- a/src/scss/layouts/_education-section.scss
+++ b/src/scss/layouts/_education-section.scss
@@ -1,40 +1,9 @@
 .education-section {
-
-  &__container {
-    //display: flex;
-    //flex-direction: column;
-    //gap: 20px;
-    //
-    //@media screen and (min-width: $bp-tablet) {
-    //  flex-direction: row;
-    //}
-  }
-
-  //&__title {
-  //  width: 100%;
-  //
-  //  @media screen and (min-width: $bp-tablet) {
-  //    width: 40%;
-  //  }
-  //}
-
-  &__content {
-    width: 100%;
-
-    @media screen and (min-width: $bp-tablet) {
-      text-align: left;
-      width: 60%;
-    }
-  }
+  background-color: var(--color-white);
 
   &__list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  }
-
-  &__item {
-    &:nth-child(even) {
-      background-color: var(--secondary-light);
-    }
+    gap: 14px;
   }
 }
